2007-11-12  David Bateman  <dbateman@free.fr>

	* plot/title.m: Fix return value for nargout > 0.

	* plot/__go_draw_axes.m: Allow the font and fontsize to be
	specified for the title, xlabel, ylabel and text objects.

	* plot/__go_draw_axes.m: Allow arbitrary colormaps with gnuplot
	4.0 and surface plots.

2007-11-12  Michael Goffioul  <michael.goffioul@gmail.com>

	* plot/__patch__.m: Fix computation of faces when patch is defined
	with X/Y/Z data.

2007-11-09  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Correct test for have_data.
	Correct logic in setting palette data.

	* audio/wavread.m, control/base/__bodquist__.m,
	control/base/dare.m, control/base/dlqr.m, control/hinf/h2norm.m,
	control/system/c2d.m, control/system/is_detectable.m,
	control/system/is_signal_list.m, control/system/is_stabilizable.m,
	control/system/tfout.m, general/isdefinite.m,
	linear-algebra/krylov.m, miscellaneous/compare_versions.m,
	optimization/glpk.m, path/savepath.m, plot/findobj.m,
	plot/shading.m, polynomial/mpoles.m, polynomial/polyint.m,
	signal/freqz.m, signal/hurst.m, sparse/spfun.m, sparse/spones.m,
	sparse/spstats.m, testfun/assert.m, testfun/fail.m,
	testfun/test.m: Use specific end keywords.

	* plot/surfc.m, plot/meshc.m: Don't change view if hold is on.

2007-11-09  Kai Habel  <kai.habel@gmx.de>

	* plot/mesh.m, plot/pcolor.m, plot/surf.m, plot/surface.m:
	Don't change view if hold is on.

2007-11-09  David Bateman  <dbateman@free.fr>

	* plot/hidden.m: New function.
	* plot/Makefile.in (SOURCES): Add it here.
	* plot/meshc.m, plot/mesh.m: Set facecolor to White for hidden
	line removal.
	* plot/__go_draw_axes__.m: If facecolor is white flag hidden line
	removal and if it is "none" don't do hidden line removal.

	* plot/legend.m: Also allow labels for surface and patch types.
	* plot/__bar__.m: Split into separate patch pbjects to allow
	setting of the legend.
	* plot/__go_draw_axes__.m: Set titlespec from keylabel for patch
	objects as well.
